fixing text overflow

--- a/css/style.css
+++ b/css/style.css
@@ -56,3 +56,6 @@ a.black:active {
     font-size: 30px;
     height: 50px;
 }
+.fit{
+  word-wrap: break-word;
+}
